@@ -18,4 +18,4 @@ mkinstalldirs
 stamp-h
 stamp-h.in
 stamp-h1
-
+*.pc
