@@ -6,7 +6,7 @@
 # This file is placed under the LGPL.  Please see the file
 # COPYING for more details.
 #
-# $Id: Makefile.am,v 1.2 2005/02/26 01:47:22 kergoth Exp $
+# $Id: Makefile.am,v 1.3 2005/02/28 18:56:09 kergoth Exp $
 #
 
 SUBDIRS		= etc src plugins tests
@@ -14,3 +14,6 @@ EXTRA_DIST	= autogen.sh
 
 ACLOCAL_AMFLAGS = -I m4/internal -I m4/external
 AUTOMAKE_OPTIONS = 1.6
+
+pkgconfigdir = $(libdir)/pkgconfig
+pkgconfig_DATA = $(PACKAGE)-$(LT_RELEASE).pc
