@@ -1,3 +1,12 @@
+2005-02-28 Chris Larson <kergoth@handhelds.org>
+
+	* tslib.pc.in: Add pkg-config file for tslib.
+	* configure.ac, Makefile.am: Create tslib-$LT_RELEASE.pc, and install
+	  it into the correct place.  Also change the AC_INIT 'PACKAGE' from
+	  libts to tslib.  Bump the LT_RELEASE, since libts has changed a fair
+	  bit now, in preparation for the 1.0.0 release.
+	* .cvsignore: Add *.pc to CVS ignore.
+
 2005-02-25 Chris Larson <kergoth@handhelds.org>
 
 	* AUTHORS: Add self to AUTHORS file.
